played with gossip speed

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,8 @@ akka {
   remote {
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 2553
+      port = 2552
+      port = ${?AKKA_PORT}
     }
   }
   cluster {
@@ -19,5 +20,10 @@ akka {
     provider = "akka.cluster.ClusterActorRefProvider"
   }
 }
+akka.cluster.distributed-data {
+  gossip-interval = 100 ms
+  notify-subscribers-interval = 100 ms
+}
 
 port = 9090
+port = ${?PORT}
